<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="236dp"
            android:layout_height="53dp"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>

        <EditText
            android:id="@+id/et_first_name"
            style="@style/viewCustom"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/et_last_name"
            style="@style/viewCustom"
            android:layout_below="@id/et_first_name"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/et_email"
            style="@style/viewCustom"
            android:ems="10"
            android:layout_below="@id/et_last_name"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/et_password"
            style="@style/viewCustom"
            android:layout_below="@id/et_email"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/btn_register"
            style="@style/viewCustom"
            android:layout_below="@id/et_password"
            android:background="@color/colorPrimary"
            android:text="@string/create_act"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_voltar"
            style="@style/viewCustom"
            android:layout_below="@id/btn_submit"
            android:background="@color/colorPrimary"
            android:text="VOLTAR"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>