<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="236dp"
            android:layout_height="53dp"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>
    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:hint="@string/etEmail"
        android:ems="10"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/et_password"
        style="@style/viewCustom"
        android:layout_below="@id/et_email"
        android:ems="10"
        android:hint="@string/etPassword"
        android:inputType="textPassword" />
        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/viewCustom"
            android:layout_below="@id/btn_login"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="Esqueceu sua senha?"
            android:textSize="20sp" />
    <Button
        android:id="@+id/btn_login"
        style="@style/viewCustom"
        android:layout_below="@id/et_password"
        android:background="@color/colorPrimary"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_register_account"
        style="@style/viewCustom"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/create_act"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>