<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@id/imageView"
        android:layout_toLeftOf="@id/imageView"
        android:contentDescription="@string/voltar"
        app:srcCompat="@drawable/delete"
        android:background="@null"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="236dp"
        android:layout_height="53dp"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/et_email"
        style="@style/viewCustom"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="-65dp"
        android:ems="10"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_submit"
        style="@style/viewCustom"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="-37dp"
        android:background="@color/colorPrimary"
        android:text="@string/send_password_reset_email"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</RelativeLayout>
