<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageButton
            android:id="@+id/btn_voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginLeft="270dp"
            android:layout_alignBottom="@id/textView"
            android:background="@null"
            android:contentDescription="@string/voltar"
            app:srcCompat="@drawable/delete"
            />

    <TextView
        android:id="@+id/textView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:lines="3"
        android:text="@string/selecione"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/armario1"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

        <ImageView
            android:id="@+id/armario1"
            android:layout_above="@id/armario2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/armario1"
            />

        <ImageView
            android:id="@+id/armario2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"

            app:srcCompat="@drawable/armario2"/>

        <ImageView
            android:id="@+id/armario3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:layout_centerHorizontal="true"
           android:layout_below="@id/armario2"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/armario3"/>

        <TextView
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:id="@+id/textView3"
            android:layout_below="@id/armario3"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/holo_green_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arm_verde" />

        <TextView
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:layout_below="@id/textView3"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView4"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arm_vermelho" />

</RelativeLayout>
