<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gabrielfreitas.nac_1_lockit.abre_armario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="236dp"
            android:layout_height="53dp"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="330dp"
            android:layout_gravity="center"
            />

        <Button
            android:layout_marginTop="20dp"
            android:background="#018aff"
            android:visibility="invisible"
            android:textColor="#ffffff"
            android:id="@+id/control_led_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:layout_gravity="center"
            />

        <Button
            android:layout_marginTop="20dp"
            android:background="#018aff"
            android:id="@+id/control_led_off"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:layout_gravity="center"
            android:visibility="invisible"/>

        <Button
            android:layout_marginTop="20dp"
            android:background="#018aff"
            android:visibility="invisible"
            android:textColor="#ffffff"
            android:id="@+id/control_led_disconect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconect"
            android:layout_gravity="center"
            />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
