<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FaceDetection">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:lines="2"
        android:id="@+id/textView"
        style="@style/viewCustom"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/face_detection"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btn_voltar"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/voltar"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_detectar"
        android:text="@string/detectar"
        style="@style/viewCustom"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:layout_above="@id/btn_voltar"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.wonderkiln.camerakit.CameraView
        android:id="@+id/camera_view"
        android:layout_below="@id/textView"
        android:layout_above="@id/btn_detectar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <!-- app:camera_facing="front" -->

    <com.example.gabrielfreitas.nac_1_lockit.Helper.GraphicOverlay
        android:id="@+id/graphic_overlay"
        android:layout_below="@id/textView"
        android:layout_above="@id/btn_detectar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>